--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,4 @@
-{% if page.comments != false and jekyll.environment == "production" %}
+{% if site.disqus.comments != false %}
 <div id="disqus_thread"></div>
 <script>
   var disqus_config = function() {
@@ -6,16 +6,17 @@
     this.page.identifier = "{{ page.url | absolute_url }}";
   };
   (function() {
+    // DON'T EDIT BELOW THIS LINE
     var d = document,
       s = d.createElement("script");
-    s.src = "https://{{ site.disqus.shortname }}.disqus.com/embed.js";
+    s.src = "https://diving-into-azure.disqus.com/embed.js";
     s.setAttribute("data-timestamp", +new Date());
     (d.head || d.body).appendChild(s);
   })();
 </script>
 <noscript
   >Please enable JavaScript to view the
-  <a href="https://disqus.com/?ref_noscript" rel="nofollow"
+  <a href="https://disqus.com/?ref_noscript"
     >comments powered by Disqus.</a
   ></noscript
 >
