--- a/assets/scss/breakpoints/_1200up.scss
+++ b/assets/scss/breakpoints/_1200up.scss
@@ -5,3 +5,7 @@ body {
 .container {
   max-width: 990px;
 }
+
+.header {
+	background-image: url('../img/azure-background-1600by1200-1ffd90.jpg');
+}
