--- a/assets/scss/breakpoints/_800up.scss
+++ b/assets/scss/breakpoints/_800up.scss
@@ -6,6 +6,9 @@ body {
   font-size: 125%;
 }
 
+.header {
+	background-image: url('../img/azure-background-1200by900-1ffd90.jpg');
+}
 .content {
 	padding-top: 0;
 	position: relative;
