--- a/assets/scss/breakpoints/_800up.scss
+++ b/assets/scss/breakpoints/_800up.scss
@@ -42,7 +42,7 @@ HOMEPAGE STYLING
 ***************/
 
 #home {
-	.posts, .pageTitle, .pagination {
+	.posts, .pageTitle, .pagination .narrow {
     width: 75%;
 		float: none;
 		margin: 0 auto 1.5em;
@@ -142,7 +142,7 @@ POST STYLING
 ***************/
 
 .post {
-	h1, h2, h3, h4, h5, h6, p, ul, ol, dl, .pageTitle {
+	h1, h2, h3, h4, h5, h6, p, ul, ol, dl, .pageTitle, .narrow {
     width: 75%;
 		float: none;
 		margin: 0 auto 2rem; 
