--- a/assets/scss/modules/_custom.scss
+++ b/assets/scss/modules/_custom.scss
@@ -1,10 +1,11 @@
 .post {
   .blog_serie {
     margin: 15px;
-    padding: 5px 10px;
+    padding: 1px 10px;
     background-color: #f7f7f7;
     .blog_serie_title {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
+      font-weight: 600;
       font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     }
     ul {
