--- a/_includes/head.html
+++ b/_includes/head.html
@@ -72,6 +72,17 @@
 
     <!-- Modernizr -->
     <script src="{{ "/assets/js/modernizr.custom.15390.js" | prepend: site.baseurl }}" type="text/javascript"></script>
-
-    {% if site.google_analytics %} {% include google_analytics.html %} {% endif %}
+    <script>
+      function readCookie(name) {
+        var nameEQ = name + "=";
+        var ca = document.cookie.split(';');
+        for(var i=0;i < ca.length;i++) {
+            var c = ca[i];
+            while (c.charAt(0)==' ') c = c.substring(1,c.length);
+            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+        }
+        return null;
+      }
+    </script>
+    {% include google_analytics.html %}
   </head>
