--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,23 +2,22 @@
 <!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
 <!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" <![endif]-->
 <!--[if IE 8]><html class="no-js lt-ie9" <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> 
+<html class="no-js" lang="en"> <!--<![endif]-->
+   {% include head.html %}
 
-{% include head.html %}
+   <body>
 
-<body>
+      {% include header.html %}
 
-   {% include header.html %}
+      <div class="content">
+         <div class="container">
+            {{ content }}
+         </div>
+      </div><!-- end .content -->
 
-   <div class="content">
-      <div class="container">
-         {{ content }}
-      </div>
-   </div><!-- end .content -->
-
-   {% include footer.html %}
-   {% include scripts.html %}
-
-</body>
-
+      {% include footer.html %}
+      {% include scripts.html %}
+      {% include cookie-consent.html %}
+   </body>
 </html>
